# ChangeLog for dev-util/umockdev
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/umockdev/ChangeLog,v 1.17 2014/03/01 07:15:30 radhermit Exp $

*umockdev-0.6 (01 Mar 2014)

  01 Mar 2014; Tim Harder <radhermit@gentoo.org> +umockdev-0.6.ebuild:
  Version bump.

  23 Jan 2014; Tim Harder <radhermit@gentoo.org> -umockdev-0.3.2.ebuild,
  -umockdev-0.4.1.ebuild, -umockdev-0.4.3.ebuild, -umockdev-0.4.4.ebuild,
  -umockdev-0.4.5.ebuild, -umockdev-0.4.6.ebuild:
  Remove old.

*umockdev-0.5.1 (23 Jan 2014)

  23 Jan 2014; Tim Harder <radhermit@gentoo.org> +umockdev-0.5.1.ebuild:
  Version bump.

*umockdev-0.4.7 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.7.ebuild:
  Version bump.

*umockdev-0.4.6 (06 Nov 2013)

  06 Nov 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.6.ebuild:
  Version bump.

*umockdev-0.4.5 (18 Sep 2013)

  18 Sep 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.5.ebuild:
  Version bump.

*umockdev-0.4.4 (17 Sep 2013)

  17 Sep 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.4.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> umockdev-0.3.2.ebuild,
  umockdev-0.4.1.ebuild, umockdev-0.4.3.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*umockdev-0.4.3 (27 Aug 2013)

  27 Aug 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.3.ebuild:
  Version bump.

  31 Jul 2013; Tim Harder <radhermit@gentoo.org> -umockdev-0.2.1.ebuild,
  -umockdev-0.2.11.ebuild, -umockdev-0.3.ebuild,
  -files/umockdev-0.2.1-make.patch:
  Remove old.

*umockdev-0.4.1 (31 Jul 2013)

  31 Jul 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.4.1.ebuild:
  Version bump.

*umockdev-0.3.2 (21 Jul 2013)

  21 Jul 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.3.2.ebuild:
  Version bump.

*umockdev-0.3 (15 Jul 2013)

  15 Jul 2013; Tim Harder <radhermit@gentoo.org> +umockdev-0.3.ebuild:
  Version bump.

*umockdev-0.2.11 (04 Jul 2013)