@@ -4,19 +4,21 @@ Hash: SHA256
 DIST umockdev-0.4.7.tar.xz 717056 SHA256 d6dac2b10fdaaa7a6affd266bb2d902e1235538ec410648e14e26fc88bc56aad SHA512 a026e2d4026807d8bd7c372f1edd86a6ed8db9bef21291eead397b53b10aeff00a2203e2b77a1f48afb9c3963ac11ce9da5c393d554eeaa84fc254d90ffafb93 WHIRLPOOL c869b6ca78d700e1093d73a1dfba5aebade1b3661ced64e42ea9e9a6d48d3e22cb29ada5f8a082388219436e217133585a337271095c447b20a82c7689215962
 DIST umockdev-0.5.1.tar.xz 718680 SHA256 470688ef58679d4163e690ced8aac9220dacbe46266932704138951c8e8e5c9c SHA512 2adea1a4b84563c2fafe275664f813d30a8a7de0389909fbe409c49a4909cda8b7fedd8a6e10db486c1e8a5aca4a8a2bb40b3ff4d73c0198d6a88c063fedc7a6 WHIRLPOOL 7d7caaf7926a07777fc9a19d6a42b475a06fa6f5d778ce40921c87f1fc3d0667511b840bd587420e5159898d96353ed42732cc2a7b5b2bc3adeac2756c21a6f4
 DIST umockdev-0.6.tar.xz 720616 SHA256 5af26b5b23cb978681404a577561db349cbf7a2bfa8e412fc3142045b08aec15 SHA512 4408339b7015eada3613074942c5e5537a39cd3d67235dd79e22bebf449a7912202c8ecd24787d08dce9e40c53b38e22764e806528d88b4a5f28b807c24982dc WHIRLPOOL f5dbdd678ee48082bcac784d186426506e3f577affe560852421231ed25121d24623f921b23ce37a91a095c77b4afde0312c9299b9dcbb830ab7dc8bdf270626
+DIST umockdev-0.7.tar.xz 724648 SHA256 b8f1a0a3873dde81314f1cf5b8dbb61148ce30e026a0c5c56bc961e648a1c2b6 SHA512 b5af71c1e1a5058b351710e3f255d862b78653648fd70eb74625f9c82f3385d75c53402190b61ea62ee79179e120c95ef52cbf9bc142986af096449ab96f7923 WHIRLPOOL 1c2d5d92ed8d99040a92e25f79cac23529f22271b70410fc826e9e7fb9b067c32c897d2103e228533b20d206eff0c3de7273f741847d323e31cad18dc80a7f08
 EBUILD umockdev-0.4.7.ebuild 729 SHA256 1d25bae8559c1a9a187bbdf789ff2a8626536758a36db8c8fef81044c5ec8784 SHA512 19281a0fa6f67b79e0c2de9e12c41bbc972f511644a5f63621bda84beb4db0822a4144d4e592dfc512782429880fc5591273d007bd4a7df37c8b4edb20fdca04 WHIRLPOOL a27c675cbd57c523056f753efed7b812a6313fc04865ff9b059b7d85ca036af2d2190b71cb19dbc14028884b1fc726ca66267f550c4ca39a97efbbfa19c2afa1
 EBUILD umockdev-0.5.1.ebuild 729 SHA256 8c6e03c3a4e706b9f1dbd930546e92545901c4906f878a4ea504dc3710981f6e SHA512 7e941898e06e7c2852082984b1aa8b7193fd14a72797f4235caa275c030f3297824064647ef5e243337566594529a6bd2dbd26fcee60387ab3e62d9d5c639c40 WHIRLPOOL d4b4f48df40920f3989a776e477fd3ce6c44f1a14e734da08c4eb0e6307a3f0a059aea815547480e1546e78e70c33bcebb0011bcf07f181a05e4420d51842b8c
 EBUILD umockdev-0.6.ebuild 727 SHA256 83ba43ed66afe5367bf68e4f28c5a5847a75e2e5dc3477b2302ae17d14bd3bc4 SHA512 ab0db8f163cf0fbaad35ba40083d871a5609d17add9698e66abd1d4a1115b77e68106c88b8372ff38aa19f0d57bf4248fe903d0703e08b05c422d32e3345dd59 WHIRLPOOL 40f75f2d9572b9bc601c44c5a35015a05661c77e3ae501754fbeeb2a3234bf943dc76a3709ac6034099b38573e8c92424c7df0417a7b4131676a2b2e5e9da06f
-MISC ChangeLog 2511 SHA256 4e3acd785141ac87d123c489f4663dac1a908c180b6f1a245d6879e61674ddd8 SHA512 e38d118706a55a03217bf0a96d14d62e6132c73497e6e3221babbc0e993831680e5ed948b778b99818cc68044aafb1ed30dbd342562d862400682c6532ee3d9a WHIRLPOOL 3eef66a227aca0fe82a020847b373910ca2f69b2e447538fd96d5ffa1f0c1f3b16172ce61cdd35757ed4a366ab58ff6142f8b43c5375d5c5bf5993cad93aa03e
+EBUILD umockdev-0.7.ebuild 727 SHA256 321b01f0d44b9835d3973bd7f5173696ab4e5ba22a90edc7ba63d38647800c78 SHA512 e82e9035ea90fbf2d831f2706151bf0eb1b9adb3c87663ddd9070ba05be54dc9e557884a56ef897d6ea908f96d078a5eb6093990be4d5afa6ceb6667762ca16c WHIRLPOOL 87da7b84a8b740fbf5087297b005b2ba149e817a35ce0b9aa53dc8c1a1b0a68d598c179987294fc538065d6d74a49210afe57f3715c6e77cbbb1575b504f1d4d
+MISC ChangeLog 2628 SHA256 d7d5eb50f4a80f270cb4f900de234cdb0178ab5cf023c4bc23360340e59436f1 SHA512 86a716a29c94dbdb57ad34e304d8da3a0cbe53449ef0259c508c071001877ec40c1501a1c3e3e27616fc85b5c8c53e28f28a2de8134cd4ac762d32910b5b23d5 WHIRLPOOL 851715584af7f623e260468678d6fd6ab3c3d509218ccec4ffffbc082edf39a5dd4cac0df6f42a1523975011d9f075aa4d2e827999d665c16a35af75e836efbd
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTEYkVAAoJEEqz6FtPBkyjhmsH/01emJjhsY3OAMGqdLy3RK5/
-RE4SgZEUJ6A9gX8aiX+u1cVd0Hx3G5xmK/tvUdS3K1tjP5e6+OPR7tJ4JoGC23p1
-XdOHHyeR4EWYgXjwPuVq40fPsv9Blkvmo99G5HoL+XnPrXgJRHOaQVsXxTTGE9CK
-/JUAEZ7t6CYolxf/YLW9GKAF+DT7mbtbetkpre/5vo+YhRc1kDJhZC3DewN3hzBV
-IfTCPC3kxwpxBxfqnY5qgYpveG3ypZdrXVoQ5N582Wr2Kbi+SDViQZGVmnfKqGZu
-y2YcGjaXU1MJ0xig+LUTow46vFeEtITZqEQvah3hsfLwEK/421kUV10/fRejWC8=
-=5q/o
+iQEcBAEBCAAGBQJTF+FsAAoJEEqz6FtPBkyjLykH/1ZjIwYPBVp/AHKHAiLxKsmc
+NYrwaOPQf5vJ1UyTTOhrZgj/1AAlF/8OyIOPQCZtrHNf97hCGYTN/ROpO/+7Jmpn
+mU/nm5G03/2aqIqNCNMgbxcRjX/CCR0uuk8hVOFho5r6E56sM5mto+tb3dylS0YF
+wMqX/6JDElYIeAPnSgIOaRPAQt6iLPFt82yNDcu7Kn1PfzVws9qEPnq4Gp2pXm6L
+DKZcGb/XKD3dR8RJzrHahNkacIAzzMmvr0j2j06KnNPRwbr8DxIWXPZeBWuWin+v
+Dq60raKQpzC9bvFaDEjz5Y2RUy4DpotHEIuLXOIjoQX2UYBTnhev343I8Q+PCKI=
+=byqr
 -----END PGP SIGNATURE-----
