@@ -3,26 +3,28 @@ Hash: SHA256
 
 AUX mitmproxy-0.10-jsbeautifier-imports.patch 1505 SHA256 4ccee70827d21ab42796f03358a48c6aabc0198ab5a3b44dd9805a8aedf96cbb SHA512 863aa8d2ae27b866b573812421d6cd3e9cf45ae70c499005e688a17f09e5a9a65ebb36a5e05599cfe76e7d4f59361c4870dfe9dc6ad764a09847180c74a292ca WHIRLPOOL 3b1c67562cce7a8a9c5064b23219489e5961a7b905770070f91d3c70acef37a7c02a25cf93753fdbb35f011af7ba33e83f490838e967c6627f0e99aa18bed528
 AUX mitmproxy-0.9.1-pil-import.patch 368 SHA256 349986d0a32abbb7f6d86abb82ae4a81517d12f104742b770fbb9b8afe1f35a1 SHA512 5e8a34a01c947af0598991b6b49a9d1f0a830799b0277d60ba580a0758c518802613dd54a1217070d86578986921e692f468ab0d42e19492405af174b5d0d055 WHIRLPOOL a04786473507502056976560a6881e6b6d7ae337fe1c4c8c4963b60b529e794c4eab612eebd472745d48c6b6921b735374f5584f1c7e8ae5f6beb57515cc3a2b
+DIST mitmproxy-0.10.1.tar.gz 3426109 SHA256 527cbff76e0d49d7db62561252d399e1c747730676515c4ed89250c223e2fe56 SHA512 2bef02f07942177044afa24749c4e8e2ba1aae5ee33e2cbffbecc557a09351865b70dc92b9acfd285716a82c84026a3eb93f889176fd288c1e8d67a415a5c79a WHIRLPOOL 73391bf717df855016db3158e4e38126f4b5e29a28566202843b3cf15412e9b1f281ad062d86f50965dfeab344488a11e2f8ba11a3181c1da56998a297b262d0
 DIST mitmproxy-0.10.tar.gz 3408925 SHA256 524e3e91ec9b63f1aec4fd86c55a43e935808da7d558d806c1212b4ba18deea5 SHA512 a8a6fcd074def4102050323b6be4d5bd68f6cba4b3a9654c3bab4d58c1ec374eeee839527d31d0ae43eca8c8dea48952166cdcbf21ae0b85f5823c4ee3977dd4 WHIRLPOOL 32ae360c7ab4d4797488eb8877349ef4696805c4bbfd6dae4b8c3272b54e8f65538cbbb8fde45c575b5372ac657aeafd6fe7013afe2a70930473050afdb47d06
 DIST mitmproxy-0.8.1.tar.gz 2782437 SHA256 efccd77e6734cbf3472d4ebf65d5bfed424a110ec1ee7ff28828e8e452e51783 SHA512 184d42a67e49f585fecf78bbabb19bd0697e185cb4007880dc2d2eecb0d70a148f8c81b250da65eb1c6f638b7d4882d7b3d2f93263b9021057dc2df9b9b7499b WHIRLPOOL 25c2b880627bf9c91d36de505c3248d937d27c9b0783e17d58cc4fc51a21bb0c694cf72104aed9a89aaf44d96d7ddb5efa18c5952563f0bb7d4fa606f1492997
 DIST mitmproxy-0.9.1.tar.gz 3121659 SHA256 18e0ca349ac8565eaa422693123e864251edbaab7e7c938ea5481d5511715eec SHA512 aa4c9ca00ee7d4e4d705146db513316192f8f1a60958f8bc2b32a1365a5294a17203dfc9f1aaaae2fce737729136da45255a97bbe66844cdb7173aa72279dc81 WHIRLPOOL c8a955f2304c3f2c134650a15bcdbd1c7f39330f3897371a30479a6754958db4c087dbcff14d2e8ab9e19b61abcb738df62993e8988fc7a0eace45d97a88e502
 DIST mitmproxy-0.9.2.tar.gz 3180194 SHA256 00b200cd7867ca7b0c907bb6a05075807040318cb32fc6bedcd4cb8363c6d795 SHA512 2d34e803f5c99f4245c192b58a90bf30be9f53434278e80c49fe6c795032cf033eaf62f0e1cc9612bb946d06473071920f60d0a80ccaefd479540b401856b26b WHIRLPOOL 3b052326f330c8cb50dc4fb51d20f90e78ec5334b0e3eaa8f4b56a5b0de2ed5025167fb4245f18c570cd32d5cdaa8ceedad771ec0490c53fb91ea4753c673854
 DIST mitmproxy-0.9.tar.gz 3116986 SHA256 f2598add658e8297d6f4d07c9dca986bff0800b3e4456fe8f5884dd24cb4b8b5 SHA512 5299c8f62c323cbcf4ab6d031dbf983495cd03823f42a610837053db6c88640765d5b9587efe85a22d0739e4b6fab1e88c2ae605acccfbab8003912e9008daf9 WHIRLPOOL 9bdee0095ccd47de4445099c9d0489a9740e89ff75049c60ebac5d99678cf1c13ae7b3272d207027c527c51f6a836fcde295b830816abf6558eb5eb4336241ba
+EBUILD mitmproxy-0.10.1.ebuild 1516 SHA256 5e44d026898fe79bdb620cd60e9eeb965f4e5d692f1155335a4945725ecdfe02 SHA512 d49e9a7cae5e69cf92984c2d96ef7679935e4823c4b88f4682b6692b0af53bef354d5e24a852ab05ded56a709c265beadc9e3713a77cdeae76e4c5dd0c2ab50a WHIRLPOOL a29a54a89f5ae27758742738b826289c205347850d14cb0a54c36de36bdd708ecf4f04dc84979fbb923dfc0ecf574cd987bced2630eccea9943df532bdc31875
 EBUILD mitmproxy-0.10.ebuild 1311 SHA256 6f324e2321f145e55821c6e690d05db3d21174452f0440809bba94581ab35de8 SHA512 d96613b3ec5db298eab7b6a98e98ef9668371b28f42fd8cab13ec58e819d5232c736307325c215265a8db1f379b39a6ecc55091ca310dabcba1c797ff1d874c3 WHIRLPOOL d9cbc4c555b15daf922f3cbf120681dd9f44cc82cc2420d179cdb7e3b5a5ad5740f558dca7973cf7d2dfa2163fe54824de6212ea9ff56faed6442e8c06e71299
 EBUILD mitmproxy-0.8.1.ebuild 993 SHA256 7f7ef762e4a492420f4aafe37db9c68934161c0c323ea7dea011dc469d51a11b SHA512 2f45faddeb91ed185e6ca9c4e51b37eeda7d9cdced4a92a8267a35136aa6387cf5407a7648f4db8898b30af0b72477e35e7b1e27ceae0583b501d9b5141aa91c WHIRLPOOL 31866a2582357e8c381c5f49afc2ad6af81282cace197330f393481070c29211394aaa1c13beafde7646a355b857a585f228ae23b4c8d5650ee488a8ed4687c2
 EBUILD mitmproxy-0.9.1.ebuild 1191 SHA256 6546d3cb765128241c4ed378628316cd086d05eda427bcad0851f5e74aaaeca0 SHA512 c2078f0b22502367cb96b14b857ca1e55bda6f95d519c6d340fca9f16ae348556e628ea60c7bf3c006707f6eb89731f815552b3755a4173a57dbdd2780bb769c WHIRLPOOL 1e2a0f8256ded0fcaaf4213643d6f955b3ce145e780dfb3b42e4e24df75d7f288ab47cce44115cf3c80d02be618855132032fc2e11c425240f8975b3e7012c34
 EBUILD mitmproxy-0.9.2.ebuild 1263 SHA256 775cbb05416d9d23ba6c543acb66571911032aa1d377b246147acd99b2a286e5 SHA512 9dbf637e1ef786571beb1954438a2a79a889b5395d4626515a646125b65be3b01b904e1033c54170a9c000c00610373c8b71e1eb60591e3d099a3a7676be626b WHIRLPOOL 99ba2ac1d5ecd79cc231ad8d8b41b28ca6a08d9221e4f34b728e6da77afa9bd16ff0498a1fccbe6148e4c9c0d247b2862793a09b8e1eb2a55bd98c473e6611b7
 EBUILD mitmproxy-0.9.ebuild 1140 SHA256 f386277e1ab186c4e75739d20ba7701876360f3cdeb902af6f825f9502221a8c SHA512 7724814ffa1bde04d3e526a88f63c3c4c902b107e570a572d5b4acde8a55251bca1538a1ab7b68eeeae3b7f0a698d250f71e2f58fc6c818d2db44fc16706050a WHIRLPOOL a93f46a332704119a2ab6bbcc843d7ab547f4cfcc3da45c13b250826c73e3f68a2b415f0a2b0041904e04b8e36e306ef9f1e5d040af5f67683d33b230e34c6ee
-MISC ChangeLog 1600 SHA256 06058d5bb272fe5767ea8d66302dc859ab0be949031d1178e46fb48a603b092d SHA512 021e1c60e3f763a4baeb139ba858897e7bf39961b0c0d99cc84955f600e75eb3a44f8cb663afe6de76db690eee31efbfaff8f04a29c26fce800ea40750913803 WHIRLPOOL a90ba750ef7f60f879979c5f1dab11ae2f35b44496d088270bef602dd8b564b800a7fac14b3fe44264a4a6ae414e65219276f081b1c8b1f5315b2b9843693da1
+MISC ChangeLog 1739 SHA256 25b30999b4e2a144cfdf6942e57f85a34fef530010f603090e64e8aac84ddc82 SHA512 e9ee8fa1455ad3cb77c7b6bd00ee77a52186a8e092298e83f24417e1634249f6b3f407737b2ac8b35f8eeb26785052488348f5cc1c3ec4e3821c46f95ee6ccbe WHIRLPOOL e74c044c8cbd07e8f7f15e9a1d866306164bf8c4f0e2ef3d12938f367e28b55fccdd322a0530f4e92efff934d846d212f4f58e855a139cc8180f60174dc316e7
 MISC metadata.xml 304 SHA256 574cef2ea98a53248e4a87e21a280fe72aa0ef74fa518509943e61fa696c4be4 SHA512 26199eab5c853ba7b94aa41d4013360780425f86d30580b6ae7ccfed583a260c8d6b37fa00a897809fb543b7447730cdf351de1d2622eb31a627999c0bfe246d WHIRLPOOL 11dc3c0e814565d6e75a6c4a4a0ee0ffc908bf255ee63f4c60e9bf387ef2b7267482690210fc367ec8775ce075dc23be8df70de7c7e4f8c755fcc7c69de06c6f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS6fMjAAoJEEqz6FtPBkyjkY0H/ihiprI6LE9BXwgIdWT3nPCC
-TdqMTe0G6OZrspSSNYDaNEJ99dl2BwJ86cf5nWn1n7nX0vlf3jiHDajA2WywU/IU
-qRmfVC7hHysm5wRWswjBa0zGa2Gr4dqyjkpgWrFRd9obq1Sp30hgdXo0YsNCdbQt
-t+RBHITk3L4e5dWCyFaUsxfW4cBRWvqpmkmanZNF2J2bdoj1RhsVVckQatUxjqlx
-NH12ThYxmxgrPsMAbjx/1j/Cd2T4V7lSFm/LFUfuEi4+OujouK6Js1pfa1YMRtS2
-X6NHYBAQy6SY7k6/kY0a0VcHX2HYamlIIPxsXSgs7Fnon3z0mtvg5v6iWAn9kFQ=
-=43Xw
+iQEcBAEBCAAGBQJTF+BYAAoJEEqz6FtPBkyjqH8IAKhJWQpKDj5sFoCZjK0b+I+F
+EL1GH9/KrxBXAIYrka+mDpCZpgcdJvzoxoAk6LaFk6ih6mzrp3MddLXfWW55G1Hq
+ENvz4kFGHov6LHdpyX2EFZjDbQ37+q1w1Xo/6w7xaB35kCAxMmG1YYhYFREYW7k+
+VNS7vbnqhlwAFT5iimvy9OgKVbgAazJc8ZlZmI7ke5MNIkfKOIhk6D1WWHRoNiDo
+75meJu4Onu+WNZPmwMx/FA6PT/Fje7K704b+H05JPm58gywUZsql17wkIFCTc5ef
+kOLrF/+IGZ0POo0ybGHr46btSick9eTelDW/VqfSJJXDlgLXrwZKrCYtUcAGRzY=
+=SEFk
 -----END PGP SIGNATURE-----
