@@ -1,6 +1,11 @@
 # ChangeLog for net-proxy/mitmproxy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/mitmproxy/ChangeLog,v 1.10 2014/01/30 06:37:22 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/mitmproxy/ChangeLog,v 1.11 2014/03/06 02:41:25 radhermit Exp $
+
+*mitmproxy-0.10.1 (06 Mar 2014)
+
+  06 Mar 2014; Tim Harder <radhermit@gentoo.org> +mitmproxy-0.10.1.ebuild:
+  Version bump (bug #502580).
 
 *mitmproxy-0.10 (30 Jan 2014)
 
