@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/umockdev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/umockdev/ChangeLog,v 1.17 2014/03/01 07:15:30 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/umockdev/ChangeLog,v 1.18 2014/03/06 02:46:02 radhermit Exp $
+
+*umockdev-0.7 (06 Mar 2014)
+
+  06 Mar 2014; Tim Harder <radhermit@gentoo.org> +umockdev-0.7.ebuild:
+  Version bump.
 
 *umockdev-0.6 (01 Mar 2014)
 
